duniverse/menhirLib.20200211/test/static/bad/inline-cycle.mly
%start<int> a
%%

a: b {}
%inline b: c {}
%inline c: b {}
