duniverse/menhirLib.20200211/test/static/bad/inline-cycle.exp
File "inline-cycle.mly", line 5, characters 8-9:
Error: there is a cycle of %inline nonterminal symbols:
  b refers to c,
  which refers back to b.
